<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:paddingBottom="1dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.clipseven.progressiontransposer.MainActivity">


    <Button
        android:text="@string/cbut"
        android:layout_width="@dimen/chordbuttonsize"
        android:layout_height="@dimen/chordbuttonsize"
        android:textColor="@color/circleFontColor"
        android:background="@drawable/ripple"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/cbut" />

    <Button
        android:text="@string/dbut"
        android:layout_width="@dimen/chordbuttonsize"
        android:layout_height="@dimen/chordbuttonsize"
        android:textColor="@color/circleFontColor"
        android:background="@drawable/ripple"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/cbut"
        android:id="@+id/dbut" />

    <Button
        android:text="@string/ebut"
        android:layout_width="@dimen/chordbuttonsize"
        android:layout_height="@dimen/chordbuttonsize"
        android:textColor="@color/circleFontColor"
        android:background="@drawable/ripple"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/dbut"
        android:id="@+id/ebut" />

    <Button
        android:text="@string/bbut"
        android:layout_width="@dimen/chordbuttonsize"
        android:layout_height="@dimen/chordbuttonsize"
        android:textColor="@color/circleFontColor"
        android:background="@drawable/ripple"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/bbut" />

    <Button
        android:text="@string/abut"
        android:layout_width="@dimen/chordbuttonsize"
        android:layout_height="@dimen/chordbuttonsize"
        android:textColor="@color/circleFontColor"
        android:background="@drawable/ripple"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/bbut"
        android:id="@+id/abut" />

    <Button
        android:text="@string/gbut"
        android:layout_width="@dimen/chordbuttonsize"
        android:layout_height="@dimen/chordbuttonsize"
        android:textColor="@color/circleFontColor"
        android:background="@drawable/ripple"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/abut"
        android:id="@+id/gbut" />

    <Button
        android:text="@string/fbut"
        android:layout_width="@dimen/chordbuttonsize"
        android:layout_height="@dimen/chordbuttonsize"
        android:textColor="@color/circleFontColor"
        android:background="@drawable/ripple"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/gbut"
        android:id="@+id/fbut" />

    <Button
        android:text="@string/csbut"
        android:layout_width="@dimen/chordbuttonsize"
        android:layout_height="@dimen/chordbuttonsize"
        android:textColor="@color/circleTopFontColor"
        android:background="@drawable/ripple_top"
        android:id="@+id/csbut"
        android:layout_marginEnd="22dp"
        android:layout_above="@+id/cbut"
        android:layout_toStartOf="@+id/ebut" />

    <Button
        android:text="@string/dsbut"
        android:layout_width="@dimen/chordbuttonsize"
        android:layout_height="@dimen/chordbuttonsize"
        android:textColor="@color/circleTopFontColor"
        android:background="@drawable/ripple_top"
        android:id="@+id/dsbut"
        android:layout_marginEnd="22dp"
        android:layout_above="@+id/dbut"
        android:layout_alignEnd="@+id/ebut" />

    <Button
        android:text="@string/asbut"
        android:layout_width="@dimen/chordbuttonsize"
        android:layout_height="@dimen/chordbuttonsize"
        android:textColor="@color/circleTopFontColor"
        android:background="@drawable/ripple_top"
        android:layout_marginEnd="22dp"
        android:layout_alignTop="@+id/dsbut"
        android:layout_alignParentEnd="true"
        android:id="@+id/asbut" />

    <Button
        android:text="@string/gsbut"
        android:layout_width="@dimen/chordbuttonsize"
        android:layout_height="@dimen/chordbuttonsize"
        android:textColor="@color/circleTopFontColor"
        android:background="@drawable/ripple_top"
        android:layout_alignTop="@+id/asbut"
        android:layout_toStartOf="@+id/asbut"
        android:id="@+id/gsbut" />

    <Button
        android:text="@string/fsbut"
        android:layout_width="@dimen/chordbuttonsize"
        android:layout_height="@dimen/chordbuttonsize"
        android:layout_above="@+id/gbut"
        android:layout_toStartOf="@+id/gsbut"
        android:id="@+id/fsbut"
        android:background="@drawable/ripple_top"
        android:textColor="@color/circleTopFontColor"/>

    <TextView
        android:text="A"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:fontFamily="cursive"
        android:id="@+id/rootChordDisplay"
        android:textSize="@dimen/letterDisplaySize"
        android:textColor="@color/displayChordColor" />

    <TextView
        android:text="A#"
        android:layout_width="@dimen/chordpopsize"
        android:layout_height="@dimen/chordpopsize"
        android:scaleY="0.0000001"
        android:textColor="@color/circleTopFontColor"
        android:textSize="@dimen/letterPopSize"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:id="@+id/chordPop" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/choosenChordsTable"
        android:animateLayoutChanges="true"
        android:layout_below="@+id/adView"
        android:layout_alignParentStart="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:animateLayoutChanges="true"
            android:id="@+id/choosenChordsRow" />
    </TableLayout>

    <TableRow
        android:layout_height="55dp"
        android:layout_below="@+id/choosenChordsTable"
        android:layout_alignParentEnd="true"
        android:layout_width="165dp"
        android:gravity="center"
        android:animateLayoutChanges="true"
        android:id="@+id/transposeButtonDisplay">

    </TableRow>

</RelativeLayout>
